--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "^2.0.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
@@ -22,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.8.3",
+    "tailwind-styled-components": "^2.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
