--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "alpinejs": "^3.12.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
@@ -25,10 +26,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.8.3",
+    "sharp": "^0.32.0",
     "tailwind-styled-components": "^2.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
