--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "autoprefixer": "^10.4.14",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "url-loader": "^4.1.1"
   }
 }
