--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fontsource/inter": "^4.5.15",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.12.0",
     "@portabletext/react": "^2.0.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
@@ -25,6 +28,7 @@
     "next-sanity": "^4.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "sanity": "^3.8.3",
     "sharp": "^0.32.0",
     "tailwind-styled-components": "^2.2.0",
